--- a/inform/main.tex
+++ b/inform/main.tex
@@ -54,8 +54,19 @@
 	
 	\section{Introducción}
 	En este estudio, se analiza el rendimiento de una simulación de biblioteca en la que se evalúan diferentes políticas de atención, incluyendo la política SJF (Shortest Job First). El objetivo es entender cómo estas políticas impactan en varios indicadores de rendimiento, tales como el tamaño de la cola, el tiempo de espera, y el número de clientes atendidos.
+	\subsection{Breve descripción del proyecto}
+	% Descripción del proyecto
+	\subsection{Objetivos y metas}
+	% Objetivos y metas
+	\subsection{El sistema específico a simular y las variables de interés}
+	% Sistema simulado y variables de interés
+	\subsection{Variables que describen el problema}
+	% Descripción de variables
 	
-	\section{Metodología}
+	\section{Detalles de Implementación}
+	
+	\subsection{Pasos seguidos para la implementación}
+	% Metodología, Algoritmo de simulación, Configuración del entorno, Validación del modelo
 	
 	\subsection{Descripción de la Simulación}
 	La simulación modela el funcionamiento de una biblioteca en la que los clientes llegan y esperan ser atendidos. Se registran varias métricas clave durante la ejecución de la simulación, las cuales se analizan para evaluar el desempeño bajo diferentes condiciones.
@@ -74,7 +85,19 @@
 	\subsection{Métodos de Análisis Estadístico}
 	Se realizaron análisis descriptivos de los datos para entender la distribución de las diferentes métricas. Además, se compararon los resultados entre simulaciones que usaron la política SJF y las que no la usaron para evaluar el impacto de esta política en el rendimiento de la biblioteca.
 	
-	\section{Resultados}
+	\section{Resultados y Experimentos}
+	\subsection{Hallazgos de la simulación}
+	% Resultados principales
+	\subsection{Interpretación de los resultados}
+	% Análisis e impacto
+	\subsection{Hipótesis extraídas de los resultados}
+	% Hipótesis y razonamiento
+	\subsection{Experimentos realizados para validar las hipótesis}
+	% Diseño de experimentos y resultados de validación
+	\subsection{Necesidad de realizar el análisis estadístico de la simulación}
+	% Justificación y análisis realizados
+	\subsection{Análisis de parada de la simulación}
+	% Criterios de parada y razonamiento
 	
 	\subsection{Análisis Descriptivo de los Datos}
 	Los datos recolectados se resumen en la Tabla \ref{tab:descriptive_stats}:
@@ -101,10 +124,16 @@
 	
 	Esta tabla muestra las estadísticas descriptivas de las métricas clave de la simulación. La media y la desviación estándar proporcionan una idea del comportamiento general, mientras que los valores mínimos y máximos indican la variabilidad en los resultados.
 	
-	\section{Discusión}
+	\section{Modelo Matemático}
 	Los resultados muestran que el tamaño máximo y promedio de la cola varían significativamente entre las simulaciones. El tiempo promedio de espera también presenta una alta variabilidad, lo que sugiere que las condiciones específicas de cada simulación influyen en gran medida en el rendimiento. Comparar estos resultados entre simulaciones con y sin la política SJF puede proporcionar información valiosa sobre la efectividad de dicha política.
+	\subsection{Descripción del modelo de cómo modelos probabilísticos}
+	% Modelo matemático y ecuaciones
+	\subsection{Supuestos y restricciones}
+	% Supuestos y restricciones
+	\subsection{Comparación de los resultados obtenidos con los resultados experimentales}
+	% Resultados experimentales y análisis comparativo
 	
-	\section{Conclusiones}
+	\subsection{Conclusiones}
 	En resumen, este estudio proporciona una visión detallada del rendimiento de una biblioteca bajo diferentes políticas de atención. Los resultados indican que la política SJF puede tener un impacto significativo en la eficiencia operativa de la biblioteca, reduciendo potencialmente los tiempos de espera y mejorando la experiencia del cliente. Futuros investigaciones podrían explorar más a fondo las condiciones óptimas para implementar esta política y otras estrategias de gestión de colas.
 	
 \end{document}
