--- a/inform/main.tex
+++ b/inform/main.tex
@@ -67,7 +67,7 @@ El manejo eficiente de las colas en las bibliotecas es crucial para garantizar u
 En este análisis, efectuamos simulaciones del funcionamiento de la biblioteca y nos enfocamos en examinar estadísticamente los resultados de las simulaciones.
 
 \subsection{Objetivos y metas}
-Nuestra investigación busca comprender cómo diferentes políticas de atención, como la política Shortest Job First (SJF), afectan el rendimiento de la biblioteca en términos de tiempo de espera, tamaño de la cola y número de usuarios atendidos. Mediante el análisis estadístico de los datos recogidos durante la simulación, buscamos identificar patrones y tendencias que puedan guiar la implementación de estrategias más efectivas para minimizar los tiempos de espera y maximizar la satisfacción de los clientes.
+Nuestra investigación busca comprender cómo diferentes políticas de atención, como la política Shortest Job First (SJF), afectan el rendimiento de la biblioteca en términos de tiempo de espera, tamaño de la cola, número de usuarios atendidos y que se retiran de la biblioteca sin ser atendidos. Mediante el análisis estadístico de los datos recogidos durante la simulación, buscamos identificar patrones y tendencias que puedan guiar la implementación de estrategias más efectivas para minimizar los tiempos de espera y maximizar la satisfacción de los clientes.
 
 \subsection{El sistema específico a simular y las variables de interés}
 El sistema a simular será el funcionamiento de la biblioteca en un período de tiempo. De los resultados de las simulaciones, además de su relación con las variables del problema nos interesan los siguientes datos:
